src/objects/tractReconciliation__c.object
<CustomObject>
    <description>Record relating a Title Ownership Detail TOT record to a Tract Record.  Created during Tract Reconciliation process.</description>
    <fields>
        <fullName>Tract__c</fullName>
        <description>Relationship to the Tract Record</description>
        <label>Tract</label>
        <referenceTo>Tract__c</referenceTo>
        <relationshipLabel>Tract Reconciliations</relationshipLabel>
        <relationshipName>Tract_Reconciliations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>depthOption__c</fullName>
        <label>Depth Option</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>totValue</fullName>
                    <label>Tot Value</label>
                </value>
                <value>
                    <fullName>tractValue</fullName>
                    <label>Tract Value</label>
                </value>
                <value>
                    <fullName>manualEntry</fullName>
                    <label>Manual Entry</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>grossAcreageOption__c</fullName>
        <label>Gross Acreage Option</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>totValue</fullName>
                    <label>Tot Value</label>
                </value>
                <value>
                    <fullName>tractValue</fullName>
                    <label>Tract Value</label>
                </value>
                <value>
                    <fullName>manualEntry</fullName>
                    <label>Manual Entry</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>instrumentTypeOption__c</fullName>
        <label>Instrument Type Option</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>totValue</fullName>
                    <label>Tot Value</label>
                </value>
                <value>
                    <fullName>tractValue</fullName>
                    <label>Tract Value</label>
                </value>
                <value>
                    <fullName>manualEntry</fullName>
                    <label>Manual Entry</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>link__c</fullName>
        <formula>&quot;/&quot;&amp;Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>netAcreageUnitOption__c</fullName>
        <label>Net Acreage Unit Option</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>totValue</fullName>
                    <label>Tot Value</label>
                </value>
                <value>
                    <fullName>tractValue</fullName>
                    <label>Tract Value</label>
                </value>
                <value>
                    <fullName>manualEntry</fullName>
                    <label>Manual Entry</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>netAcresOption__c</fullName>
        <label>Net Acres Option</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>totValue</fullName>
                    <label>Tot Value</label>
                </value>
                <value>
                    <fullName>tractValue</fullName>
                    <label>Tract Value</label>
                </value>
                <value>
                    <fullName>manualEntry</fullName>
                    <label>Manual Entry</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>preTractDepth__c</fullName>
        <label>Previous Tract Depth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>preTractGrossAcres__c</fullName>
        <label>Previous Tract Gross Acres</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>preTractInstrumentType__c</fullName>
        <label>Previous Tract Instrument Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>preTractName__c</fullName>
        <label>Previous Tract Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>preTractNetAcreageUnits__c</fullName>
        <label>Previous Tract Net Acreage Units</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>preTractNetAcres__c</fullName>
        <label>Previous Tract Net Acres</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>preTractQuarterCall__c</fullName>
        <inlineHelpText>Quarter Call</inlineHelpText>
        <label>Previous Tract Quarter Call</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>quarterCallOption__c</fullName>
        <label>Quarter Call Option</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>totValue</fullName>
                    <label>Tot Value</label>
                </value>
                <value>
                    <fullName>tractValue</fullName>
                    <label>Tract Value</label>
                </value>
                <value>
                    <fullName>manualEntry</fullName>
                    <label>Manual Entry</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>targetOwnershipTract__c</fullName>
        <description>Relationship to the Title Ownership Detail TOT record.</description>
        <label>Target Ownership Tract</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>TitleOwnershipDetail__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Target_Ownership_Tract</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>TitleOwnershipDetail__c</referenceTo>
        <relationshipLabel>Tract Reconciliations</relationshipLabel>
        <relationshipName>Tract_Reconciliation</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tractAction__c</fullName>
        <description>Stores the create or update action that was taken against the Tract record during the reconciliation.</description>
        <label>tractAction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Tract Reconciliation</label>
    <nameField>
        <displayFormat>TR-{0000000000}</displayFormat>
        <label>Tract Reconciliation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tract Reconciliations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>